<resources>
    <string name="app_name">Kronikle</string>
    <string name="app_name_upper">KRONIKLE</string>

    <!--Shared Strings-->
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="continue_message">Continue</string>
    <string name="empty"></string>
    <string name="exit_app">Press BACK again to exit.</string>

    <!--Strings for Sign In & Sign Up-->
    <string name="or_sign_in_with">or sign in with</string>

    <!--Buttons for Sign In & Sign Up-->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="forgot_password_dialogue">Enter your email address below to reset it</string>
    <string name="email_submitted">Email Submitted</string>
    <string name="email_submitted_dialogue">If your email address is in our database you will get an email to reset your password</string>
    <string name="no_account_continue_guest">Do not want an account? Continue as a Guest</string>
    <string name="continue_guest">Continue as a Guest</string>
    <string name="continue_guest_dialogue">Your information will be stored locally, if lost you will not be able to recover it unless you back it up</string>
    <string name="welcome">Welcome to KORNIKLE!</string>
    <string name="welcome_back">Welcome back to KORNIKLE!</string>
    <string name="welcome_guest">Hello guest, welcome to KORNIKLE!</string>

    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <!--EditText for Sign In & Sign Up-->
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>

    <!--Error Messages for Sign In & Sign Up-->
    <string name="error_invalid_email">Invalid email address format</string>
    <string name="error_invalid_password">Invalid password format</string>
    <string name="error_empty_field">Field cannot be empty</string>

    <string name="error_first_name">First Name can only be made up of letters</string>
    <string name="error_last_name">Last Name can only be made up of letters</string>
    <string name="error_email">Email must have a valid format</string>
    <string name="error_password">Password must have 8+ characters</string>

    <!--Main Activity-->
    <string name="tasks">Tasks</string>
    <string name="habits">Habits</string>
    <string name="timers">Timers</string>
    <string name="heart">Heart</string>

    <!--Support Dialog-->
    <string name="support">Help us maintain Kronikle</string>
    <string name="support_dialog">We created Kronikle with love and want you to enjoy it without ads, whether you choose to help us or not. If you would like to help us maintain the app please consider watching an ad or making a donation. If you cannot or do not want to no worries, you have our blessing to continue using our app.</string>
    <string name="watch_add">Watch an add</string>
    <string name="watch_add_thanks">Thank you for watching an add!</string>
    <string name="donate">Make a donation</string>
    <string name="donate_thanks">Thank you for donating!</string>

    <!--Circle Button-->]
    <string name="add_task">Add a Task</string>
    <string name="add_habit">Add a Habit</string>
    <string name="add_timer">Add a Timer</string>

    <!--Circle Button-->]
    <string name="new_task">New Task</string>
    <string name="new_habit">New Habit</string>
    <string name="new_timer">New Timer</string>

    <!--Menu-->
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <!--Profile-->
    <string name="profile_full_name">Ever Barillas</string>
    <string name="profile_email">everalf1995@gmail.com</string>

    <!--Task-->
    <string name="title_hint">Task Title</string>
    <string name="description_hint">Enter a description for your task (option)</string>


    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task_type">Type of task</string>
    <string name="relevance">Relevance</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>


    <string name="create_task">Create Task</string>
    <string name="task_created">Task Created</string>


    <!--Relevance-->
    <string name="important_exclamation">!!!!!</string>
    <string name="not_important">Not Important</string>
    <string name="somewhat_important">Somewhat Important</string>
    <string name="important">Important</string>
    <string name="very_important">Very Important</string>
    <string name="really_important">Really Important</string>


    <!--Shared-->
    <string name="add_new_entry">Add New Entry +</string>
    <string name="make_a_selection">Make a Selection</string>
    <string name="save">Save</string>
    <string name="trash">Trash</string>

</resources>
