<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/NoActionBarTheme"
    android:background="@drawable/round_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/linear_layout_MASD">


    <ImageView
        android:id="@+id/image_view_close_MASD"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/close"
        app:srcCompat="@drawable/icon_close" />

    <TextView
        android:id="@+id/text_view_title_MASD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/support"
        android:textAlignment="center"
        android:textSize="18sp" />

    <View
        android:id="@+id/view_divider_MASD"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorPrimaryDark" />

    <TextView
        android:id="@+id/text_view_message_MASD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/support_dialog"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_watch_add_MASD"
        android:drawableStart="@drawable/icon_watch_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/watch_add"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_donate_MASD"
        android:drawableStart="@drawable/icon_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/donate"
        android:textSize="16sp" />

</LinearLayout>