<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Landing.SignInFragment"
    android:id="@+id/constraint_layout_SIF">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email_SIF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linerar_layout_1_SIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_email_SIF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_email_selected"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLines="1"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/linerar_layout_1_SIF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linerar_layout_2_SIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_SIF">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password_SIF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/icon_password_visibility_selected"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/colorPrimaryDark"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="147dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password_SIF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password_selected"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword|textNoSuggestions"
                android:maxLines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_forgot_password_SIF"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="?attr/colorAccent"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="262dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerar_layout_2_SIF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/text_view_or_SIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerar_layout_1_SIF">

        <Button
            android:id="@+id/button_sign_in_SIF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="323dp" />

        <Button
            android:id="@+id/button_continue_guest_SIF"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/no_account_continue_guest"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?attr/colorAccent"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="402dp" />
    </LinearLayout>

    <View
        android:id="@+id/view_1_SIF"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
        app:layout_constraintEnd_toStartOf="@+id/text_view_or_SIF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF" />

    <TextView
        android:id="@+id/text_view_or_SIF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/button_facebook_SIF"
        app:layout_constraintEnd_toStartOf="@+id/view_2_SIF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_1_SIF"
        app:layout_constraintTop_toBottomOf="@+id/linerar_layout_2_SIF" />

    <View
        android:id="@+id/view_2_SIF"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_or_SIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_or_SIF"
        app:layout_constraintTop_toTopOf="@+id/text_view_or_SIF" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_facebook_SIF"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:src="@drawable/icon_facebook"
        android:scaleType="center"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_google_SIF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_or_SIF" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_google_SIF"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:src="@drawable/icon_google"
        android:scaleType="center"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/button_facebook_SIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_facebook_SIF"
        app:layout_constraintTop_toTopOf="@+id/button_facebook_SIF" />

</android.support.constraint.ConstraintLayout>